added functionality to add a new office throught the form

--- a/frontend/src/app/post-offices/post-offices.component.html
+++ b/frontend/src/app/post-offices/post-offices.component.html
@@ -1,1 +1,8 @@
-<p>post-offices works!</p>
+<div class="post-offices">
+  <div class="header-bar">
+    <button type="button" (click)="addOffice()">
+      Add Office
+    </button>
+  </div>
+  <p>Table here</p>
+</div>
