added CRUD for the offices, added http interceptor to catch messages

--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,5 @@
-<p>dashboard works!</p>
+<span>Total offices</span>
+<h1>{{ totalOffices }}</h1>
+
+<span>Total shipments</span>
+<h1>{{ totalShipments }}</h1>
